# atomistica

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  ChangeLog.md  DEVELOPMENT.md  MANIFEST.in  POTENTIALS.md  README  README.LAMMPS  README.LAMMPS.md  README.PYTHON  README.STANDALONE  README.STANDALONE.md  README.md  _config.yml  discover_version.py  env.sh  index.html  index.md  main.py  meson.build  params.json  pyproject.toml  rebuild-uv.sh  rebuild.sh  requirements.txt  setup.cfg.gfortran  setup.cfg.gnu  setup.cfg.gnu10  setup.cfg.gnu10_omp  setup.cfg.gnu_omp  setup.cfg.intel  setup.cfg.intel_omp  setup.cfg.macos  setup.cfg.travis  setup.py
.github/workflows/: build-wheels.yml  main.yml  meson-build.yml  publish.yml  run_tests.yml  run_tests.yml.disabled  source-package.yml
build_helpers/: generate_factories.py
build_lammps/: Makefile.gfortran  Makefile.gnu  Makefile.ifort  Makefile.intel  Makefile.intel_2025  Makefile.xl
build_standalone/: Makefile.gnu  Makefile.intel  Makefile.intel_2025  Makefile.mpi
build_unittests/: Makefile.gnu  Makefile.intel  Makefile.xl
doc/: install.lammps.md  install.python.md  install.standalone.md  standalone.md  unittests.md
docker/: Dockerfile  README.md
examples/ASE/: README  calcs.py  fcc.py  liquid_tools.py  (+4 more)
src/: filter.inc  gen_versioninfo.sh  macros.inc  makefile.inc  meson.build  potentials.inc  spline.inc
src/potentials/: bop.inc  bop_registry.f90  coulomb.inc  meson.build  potentials_registry.f90
src/potentials/bop/: bop_kernel.f90  default_bind_to_func.f90  default_compute_func.f90  default_cutoff.f90  default_del_func.f90  meson.build
src/potentials/bop/albe_bop/: albe_bop.f90  albe_bop_scr.f90
src/potentials/bop/brenner/: brenner.f90  brenner_func.f90  brenner_module.f90  brenner_params.f90  brenner_registry.f90  brenner_scr.f90  brenner_type.f90  meson.build
src/potentials/bop/juslin/: juslin.f90  juslin_func.f90  juslin_module.f90  juslin_params.f90  juslin_registry.f90  juslin_scr.f90  juslin_type.f90  meson.build
src/potentials/bop/kumagai/: kumagai.f90  kumagai_func.f90  kumagai_module.f90  kumagai_params.f90  kumagai_registry.f90  kumagai_scr.f90  kumagai_type.f90  meson.build
src/potentials/bop/rebo2/: bop_kernel_rebo2.f90  meson.build  rebo2.f90  rebo2_db.f90  rebo2_default_tables.f90  rebo2_func.f90  rebo2_module.f90  rebo2_registry.f90  rebo2_scr.f90  rebo2_type.f90
src/potentials/bop/tersoff/: meson.build  tersoff.f90  tersoff_func.f90  tersoff_module.f90  tersoff_params.f90  tersoff_registry.f90  tersoff_scr.f90  tersoff_type.f90
src/potentials/coulomb/: charge_overlap.f90  coulomb_short_gamma.f90  cutoff_coulomb.f90  damp_short_gamma.f90  direct_coulomb.f90  fft3-public.f  fft_wrap.f  gaussian_charges.f90  meson.build  pme.f90  pme_kernel.f90  slater_charges.f90
src/potentials/dispersion/: dispdftd3.f90  meson.build
src/potentials/eam/: meson.build  tabulated_alloy_eam.f90  tabulated_eam.f90
src/potentials/non_newtonian/: variable_charge.f90
src/potentials/pair/: born_mayer.f90  double_harmonic.f90  lj_cut.f90  meson.build  r6.f90
src/potentials/pair_potentials/: born_mayer.f90  double_harmonic.f90  harmonic.f90  lj_cut.f90  r6.f90
src/special/: anderson_mixer.f90  extrapolation.f90  meson.build  table2d.f90  table3d.f90  table4d.f90
src/standalone/: andersen_p.f90  berendsen_p.f90  berendsen_t.f90  callables_dispatch.template.f90  cfg.f90  confinement.f90  constant_force.f90  constant_strain_rate.f90  constant_velocity.f90  constraints.f90  constraints_plugin.f90  coulomb_dispatch.template.f90  cyclic.f90  diffusion_coefficient.f90  domain_decomposition.f90  dynamics.f90  factory.template.c  factory.template.h  ffm_tip.f90  fire.f90  freezer.f90  gen_dispatch.py  gen_factory.py  harmonic_hook.f90  heatflux.f90  input_trajectory.f90  integrators_dispatch.template.f90  interpolation_kernels_dispatch.f90  lammps_data.f90  lucy.f90  main.f90  meson.build  molecules.f90  native_io.f90  nc.f90  neighbors.f90  no_integration.f90  output_cell.f90  output_cfg.f90  output_energy.f90  (+31 more)
src/standalone/core/: andersen_p.f90  berendsen_t.f90  callables_dispatch.template.f90  cfg.f90  confinement.f90  constant_force.f90  constant_strain_rate.f90  coulomb_dispatch.template.f90  factory.template.c  ffm_tip.f90  gen_dispatch.py  gen_factory.py  harmonic_hook.f90  integrators_dispatch.template.f90  interpolation_kernels_dispatch.f90  lucy.f90  meson.build  molecules.f90  native_io.f90  nc.f90  neighbors.f90  no_integration.f90  output_cell.f90  output_cfg.f90  output_energy.f90  output_nc.f90  output_time.f90  output_xyz.f90  particles.f90  pdb.f90  remove_rotation.f90  rng.f90  settle.f90  slicing.f90  sliding_p.f90  square.f90  ufmc.f90  verlet_global_langevin.f90  vtk.f90  xyz_f90.f90
src/standalone/entrypoint/: main.f90  meson.build
src/support/: MPI_context.f90  PeriodicTable.f90  System.f90  Units.f90  atomistica.f90  c_f.f90  c_linearalgebra.cpp  c_logging.c  c_ptrdict.c  complexcomp.h  cu_linearalgebra.cu  cu_mat.cu  cu_mat.h  cu_util.h  cu_vec.cu  cu_vec.h  cutoff.f90  data.f90  error.f90  error.h  error.inc  f_linearalgebra.f90  f_logging.f90  f_ptrdict.f90  histogram1d.f90  io.f90  linearalgebra.h  logging.h  mat.h  mdcore.f90  meson.build  misc.f90  nonuniform_spline.f90  ptrdict.h  simple_spline.f90  supplib.f90  table2d.f90  table3d.f90  table4d.f90  timer.f90  (+3 more)
tests/: Cu_mishin1.eam.alloy  aC.traj  aC_small.cfg  bulk_properties.py  coulomb.py  dftb3.py  dimers.py  eam_crash1.poscar  eam_crash2.poscar  eam_special_cases.py  fF.out  fZ.out  forces_and_virial.py  frho.out  mask.py  mio.py  neighbor_list.py  pbc.py  rebo2_molecules.py  run_tests.py  surface_properties.py  test_bulk_properties.py  test_coulomb.py  test_dftb3.py  test_eam_special_cases.py  test_forces_and_virial.py  test_io.py  test_neighbor_list.py  test_pbc.py  test_rebo2_molecules.py  test_surface_properties.py  test_tb_stresses.py  test_tersoff.py
tools/: c_header.txt  discover_classes.py  f_header.txt  f_header_n.txt  fix_headers.sh  listclasses.py  meta.py  py_header.txt  relink_osx.sh
(+150 files in other folders)
