[build-system]
requires = ["meson-python>=0.15.0", "numpy>=2.0.0", "DiscoverVersion"]
build-backend = "mesonpy"

[project]
name = "atomistica"
dynamic = ["version"]
description = "Atomistica is a library of interatomic potentials that is compatible with ASE and LAMMPS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "ase>=3.15.0",
    "pip>=25.2",
]
license = {text = "GPL-2.0-or-later"}
maintainers = [
    {name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de"}
]
urls = {homepage = "https://github.com/Atomistica/atomistica"}

[tool.setuptools_scm]
# Empty section enables setuptools_scm with default configuration
# It will use git tags for versioning

[tool.meson-python.args]
setup = ["-Dbuildtype=release"]
