old_path = path
path = join_paths(path, 'pair')

pair_sources = [
    join_paths(path, 'born_mayer.f90'),
    join_paths(path, 'double_harmonic.f90'),
    join_paths(path, 'harmonic.f90'),
    join_paths(path, 'lj_cut.f90'),
    join_paths(path, 'r6.f90')
]

juslin_sources = [
    join_paths(path, 'dispdftd3.f90'),
]

all_potentials_sources += pair_sources
